# iCalAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: event_types.txt  list_of_agendas.json
icalagent/: __init__.py  __main__.py  agenda_sources.py  cli.py  config.py  event_types.py  exporters.py  importers.py  parser.py
icalagent/clients/: __init__.py  gptclient.py
icalagent/models/: __init__.py  event.py
icalagent/scrapers/: __init__.py  web.py
